crates/carta/tests/snapshots/golden_writer__man__common__inline-code-backtick.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
use \f[CR]a \(gab\(ga c\f[R] here
