crates/carta/tests/snapshots/golden_writer__man__common__inline-code-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
before
\f[CR]a & b \(ti c \(rs d % e # f $ g _ h { i } j \(ha k | l < m > n\f[R]
after
