crates/carta/tests/snapshots/golden_writer__man__common__inline-code.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
a \f[CR]let x = 1;\f[R] b
