crates/carta/tests/snapshots/golden_writer__man__common__line-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
first line
.PD 0
.P
.PD
second line
