crates/carta/tests/snapshots/golden_writer__man__common__link-autolink.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
\c
.UR http://example.com
.UE \c
