crates/carta/tests/snapshots/golden_writer__man__common__link-empty-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
before \c
.UR http://example.com
.UE \c
\ after
