crates/carta/tests/snapshots/golden_writer__man__common__link-label-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
Padding padding padding padding \c
.UR http://example.com/path
a multi word link label here
.UE \c
\ and trailing words to push wrapping.
