crates/carta/tests/snapshots/golden_writer__man__common__link-title-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
\c
.UR http://example.com
text
.UE \c
