crates/carta/tests/snapshots/golden_writer__man__common__link-url-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
\c
.UR http://example.com/a%20b#frag
x
.UE \c
