crates/carta/tests/snapshots/golden_writer__man__common__list-bullet-in-definition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.TP
term
.IP \(bu 2
alpha
.IP \(bu 2
beta
