crates/carta/tests/snapshots/golden_writer__man__common__list-bullet-in-ordered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP "1." 3
first
.IP "2." 3
second
.RS 4
.IP \(bu 2
suba
.IP \(bu 2
subb
.RE
.IP "3." 3
third
