crates/carta/tests/snapshots/golden_writer__man__common__list-nested-first-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP \(bu 2
.IP \(bu 2
inner one
.IP \(bu 2
inner two
.IP \(bu 2
outer two
